syntax="proto3";

option go_package = "grpc/protobuf/emailqueue";

package emailqueue;

message ReceiveStat {
    string key = 1;
    int32 message_number = 2;
    int32 message_id = 3;
}

message ReceiveMessage {
    string sender  = 1;
    string subject = 2;
}

message ReceiveRequest {
    string key = 1;
}

message ReceiveStatResponse {
    ReceiveStat receiveStat = 1;
}

message ReceiveMessageResponse {
    ReceiveMessage receiveMessage = 1;
}

service EmailService {
    rpc ReceiveList(ReceiveRequest) returns (stream ReceiveStatResponse) {} 
    rpc ReceiveMessage(ReceiveRequest) returns (stream ReceiveMessageResponse) {}
}


